--- a/manifest.json
+++ b/manifest.json
@@ -35,6 +35,7 @@
     "webNavigation",
     "unlimitedStorage",
     "notifications",
+    "declarativeContent",
     "http://*/*",
     "https://*/*",
     "ftp://*/*"
