--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "default_title": "Test"
   },
   "content_scripts": [ {
-    "js": ["js/content_scripts.js"],
+    "js": ["js/jquery.js","js/content_scripts.js"],
     "css": ["css/content.css"],
     "matches": ["<all_urls>"],
     "run_at": "document_end"
